--- a/musicwall.css
+++ b/musicwall.css
@@ -70,6 +70,17 @@ button:hover {
     }
 }
 
+/* Random button animation */
+.music-square.pulse-animation {
+    animation: randomPulse .3s ease-in-out;
+}
+
+@keyframes randomPulse {
+    0% { transform: scale(1.0); }
+    50% { transform: scale(1.06); }
+    100% { transform: scale(1.0); }
+}
+
 #soundcloud-player iframe {
     width: 400px;
     margin: 10px auto;
